[package]
name = "lau-destruction-transform"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-destruction-transform"
description = "Rust library for destruction transform in the PLATO ecosystem"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
